Fix z-index for mediacontrols

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -631,7 +631,7 @@ $controlsArrowAngleActive: 36deg;
 	position: absolute;
 	top: 20px;
 	right: 15px;
-	z-index: 2;
+	z-index: 11;
 	color: var(--r-link-color);
 	background: none;
 	border: none;
